1. Added new db related items. 2. Renamed fields to be more consistent.
