# docs/swagger.json
@@ -141,14 +141,14 @@
         "dto.ApiInputValidateBasicOtp": {
             "type": "object",
             "properties": {
-                "interval": {
-                    "type": "integer"
-                },
                 "length": {
                     "type": "integer"
                 },
                 "otp": {
                     "type": "string"
+                },
+                "otpLifespanInSeconds": {
+                    "type": "integer"
                 },
                 "referenceToken": {
                     "type": "string"
