# dto/internal.otp.go
@@ -7,11 +7,11 @@ type ApiInputBasicOtp struct {
 }
 
 type ApiInputValidateBasicOtp struct {
-	Requester      string `json:"requester" example:"jim@starfleet.com"`
-	Length         int    `json:"length"`
-	Interval       int    `json:"interval"`
-	Otp            string `json:"otp"`
-	ReferenceToken string `json:"referenceToken"`
+	Requester            string `json:"requester" example:"jim@starfleet.com"`
+	Length               int    `json:"length"`
+	OtpLifespanInSeconds int    `json:"otpLifespanInSeconds"`
+	Otp                  string `json:"otp"`
+	ReferenceToken       string `json:"referenceToken"`
 }
 
 type ApiResultValidateBasicOtp struct {
